--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS16 - Flag APP</title>
+    <title>Flag APP</title>
 
     <link
       rel="stylesheet"
@@ -30,7 +30,7 @@
         />
       </div>
       <br />
-      <h1>JavaScript Plus -JS16-ASYNC-2</h1>
+      <h1>JS-ASYNC</h1>
       <h2>Flag App</h2>
     </header>
     <main class="container mt-4">
